# gstreamer-android-with-cmake

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt
app/src/main/cpp/cmake-external-modules/: dependencies.cmake  gstreamer-libs.cmake
app/src/main/cpp/jni/: Bridge.cpp  CMakeLists.txt
app/src/main/cpp/jni/gstreamer_android/: CMakeLists.txt  gstreamer_android.c
app/src/main/java/com/example/mytestapp/: MainActivity.kt  NativeTest.kt
app/src/main/java/com/example/mytestapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
